# nfc_skills

./: pyproject.toml
nfc_skills/: hybrid_trained.model  predict.py  preprocess_data.py  simple_trained.model  test.py  train.py
nfc_skills/data/: __init__.py  gmf_ncf.py  gmf_nfc.py  handler.py  metric_logger.py  ncf.py  nfc.py  train_dataset.py
tests/: test_nfc_skills.py
